<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ROW 1 START -->
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@id/gl_h_1"
        app:layout_constraintEnd_toStartOf="@id/gl_v_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_plus_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus_minus"
        app:layout_constraintBottom_toTopOf="@id/gl_h_1"
        app:layout_constraintEnd_toStartOf="@id/gl_v_2"
        app:layout_constraintStart_toEndOf="@id/gl_v_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/percent_sign"
        app:layout_constraintBottom_toTopOf="@id/gl_h_1"
        app:layout_constraintEnd_toStartOf="@id/gl_v_3"
        app:layout_constraintStart_toEndOf="@id/gl_v_2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide_sign"
        app:layout_constraintBottom_toTopOf="@id/gl_h_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_v_3"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- ROW 1 END -->

    <!-- ROW 2 START -->
    <Button
        android:id="@+id/btn_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@id/gl_h_2"
        app:layout_constraintEnd_toStartOf="@id/gl_v_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_h_1" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@id/gl_h_2"
        app:layout_constraintEnd_toStartOf="@id/gl_v_2"
        app:layout_constraintStart_toEndOf="@id/gl_v_1"
        app:layout_constraintTop_toBottomOf="@id/gl_h_1" />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@id/gl_h_2"
        app:layout_constraintEnd_toStartOf="@id/gl_v_3"
        app:layout_constraintStart_toEndOf="@id/gl_v_2"
        app:layout_constraintTop_toBottomOf="@id/gl_h_1" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply_sign"
        app:layout_constraintBottom_toTopOf="@id/gl_h_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_v_3"
        app:layout_constraintTop_toBottomOf="@id/gl_h_1" />
    <!-- ROW 2 END -->

    <!-- ROW 3 START -->
    <Button
        android:id="@+id/btn_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@id/gl_h_3"
        app:layout_constraintEnd_toStartOf="@id/gl_v_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_h_2" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@id/gl_h_3"
        app:layout_constraintEnd_toStartOf="@id/gl_v_2"
        app:layout_constraintStart_toEndOf="@id/gl_v_1"
        app:layout_constraintTop_toBottomOf="@id/gl_h_2" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@id/gl_h_3"
        app:layout_constraintEnd_toStartOf="@id/gl_v_3"
        app:layout_constraintStart_toEndOf="@id/gl_v_2"
        app:layout_constraintTop_toBottomOf="@id/gl_h_2" />

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/subtract_sign"
        app:layout_constraintBottom_toTopOf="@id/gl_h_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_v_3"
        app:layout_constraintTop_toBottomOf="@id/gl_h_2" />
    <!-- ROW 3 END -->

    <!-- ROW 4 START -->
    <Button
        android:id="@+id/btn_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@id/gl_h_4"
        app:layout_constraintEnd_toStartOf="@id/gl_v_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_h_3" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@id/gl_h_4"
        app:layout_constraintEnd_toStartOf="@id/gl_v_2"
        app:layout_constraintStart_toEndOf="@id/gl_v_1"
        app:layout_constraintTop_toBottomOf="@id/gl_h_3" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@id/gl_h_4"
        app:layout_constraintEnd_toStartOf="@id/gl_v_3"
        app:layout_constraintStart_toEndOf="@id/gl_v_2"
        app:layout_constraintTop_toBottomOf="@id/gl_h_3" />

    <Button
        android:id="@+id/btn_addition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/addition_sign"
        app:layout_constraintBottom_toTopOf="@id/gl_h_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_v_3"
        app:layout_constraintTop_toBottomOf="@id/gl_h_3" />
    <!-- ROW 4 END -->

    <!-- ROW 5 START -->
    <Button
        android:id="@+id/btn_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_v_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_h_4" />

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_v_3"
        app:layout_constraintStart_toEndOf="@id/gl_v_2"
        app:layout_constraintTop_toBottomOf="@id/gl_h_4" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_v_3"
        app:layout_constraintTop_toBottomOf="@id/gl_h_4" />
    <!-- ROW 5 END -->

    <!-- VERTICAL GUIDELINES START -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75" />
    <!-- VERTICAL GUIDELINES END -->

    <!-- HORIZONTAL GUIDELINES START -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8" />
    <!-- HORIZONTAL GUIDELINES END -->

</androidx.constraintlayout.widget.ConstraintLayout>